--- a/ios/KevitApp/Info.plist
+++ b/ios/KevitApp/Info.plist
@@ -12,6 +12,9 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>KAKAO_APP_KEY</key>
+    <string>d20ea1517994444f4c6c35ed8fc8cd9b</string>
+
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
