--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
   package="com.kevitapp">
 
    
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET" />
   
 
@@ -13,6 +13,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+       <meta-data android:name="com.kakao.sdk.AppKey" android:value="d20ea1517994444f4c6c35ed8fc8cd9b"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
