--- a/ios/KevitApp-tvOS/Info.plist
+++ b/ios/KevitApp-tvOS/Info.plist
@@ -18,6 +18,11 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>KAKAO_APP_KEY</key>
+    <string>d20ea1517994444f4c6c35ed8fc8cd9b</string>
+
+	
+
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
