--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.1",
     "react": "^16.12.0",
+    "react-kakao-map": "^0.0.0",
     "react-kakao-maps": "^0.0.13",
     "react-native": "^0.61.5",
     "react-native-daummap": "^0.2.8",
@@ -21,6 +22,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.25",
+    "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15"
   },
